# skyblock-pricing

./: .gitignore  CMakeLists.txt  NOTICE.md  README.md
docs/: usage.md
include/private/: api.h  auctionhouse.h  cleaning.h  conversions.h  file.h  item.h  json.h  log.h  parsing.h  timing.h
include/public/: auctionhouse.h  item.h  pricinglibrary.h  timing.h
scripts/: debug.sh  intellisense.sh  release.sh
src/: api.cpp  auctionhouse.cpp  cleaning.cpp  conversions.cpp  file.cpp  item.cpp  json.cpp  log.cpp  parsing.cpp  pricinglibrary.cpp  timing.cpp
tests/: main.cpp  memoryleak.cpp
